# CppLox

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  debug.sh  gmon.out
benchmark/: output.txt  script.sh
benchmark/algo/: algo.sh
benchmark/algo/binary_search/: binary_search.lox
benchmark/algo/coin_combination/: coin_combination.lox
benchmark/algo/cycle_list/: cycle_list.lox  cycle_list.txt
benchmark/algo/flood_fill/: flood_fill.lox  flood_fill.txt
benchmark/algo/trie/: trie.lox  trie.txt
benchmark/src/: class_load.lox  gc-trigger.lox  large-loop.lox  recursion.lox
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
docs/: Doxyfile.in
source/: chunk.cpp  chunk.hpp  common.hpp  compiler.cpp  compiler.hpp  debug.cpp  debug.hpp  dispatcher.cpp  dispatcher.hpp  main.cpp  memory.cpp  memory.hpp  object.cpp  object.hpp  scanner.cpp  scanner.hpp  table.cpp  table.hpp  test  value.cpp  value.hpp  vm.cpp  vm.hpp
test/: CMakeLists.txt
test/lox_test/: test_main.py
test/lox_test/src/: async_await.lox  g_s_access.lox  lambda.lox  reduce.lox  sync.lox  sync_copy.lox
test/source/: CppLox_test.cpp
test/unit_test/hash_table/: hash_test.cpp  hashtable_test  hashtable_test.cpp  hashtable_test_pointer.cpp  test.sh  test_p.sh
